// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`404 with fetch button accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Black Lives Matter",
      "role": "StaticText",
    },
    Object {
      "name": "Support the Equal Justice Initiative",
      "role": "link",
    },
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Submit search",
      "role": "button",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "level": 3,
      "name": "Oops! We couldn't find “github.com/package/does/not/exist”.",
      "role": "heading",
    },
    Object {
      "name": "Check that you entered the URL correctly, try fetching it following the",
      "role": "StaticText",
    },
    Object {
      "name": "instructions here",
      "role": "link",
    },
    Object {
      "name": ", or request to add “github.com/package/does/not/exist” to pkg.go.dev.",
      "role": "StaticText",
    },
    Object {
      "name": "Request “github.com/package/does/not/exist”",
      "role": "button",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Reddit",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "github.com/package/does/not/exist · pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`badge accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Black Lives Matter",
      "role": "StaticText",
    },
    Object {
      "name": "Support the Equal Justice Initiative",
      "role": "link",
    },
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Submit search",
      "role": "button",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "level": 1,
      "name": "Create a badge",
      "role": "heading",
    },
    Object {
      "name": "Create a badge to link to pkg.go.dev from your project website or README file.",
      "role": "StaticText",
    },
    Object {
      "name": "Badge",
      "role": "StaticText",
    },
    Object {
      "name": "Go Reference",
      "role": "link",
    },
    Object {
      "name": "URL",
      "role": "StaticText",
    },
    Object {
      "name": "URL",
      "role": "textbox",
    },
    Object {
      "name": "Create",
      "role": "button",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "name": "Type a pkg.go.dev URL above to create a badge link.",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Reddit",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "Badge · pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`error accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Black Lives Matter",
      "role": "StaticText",
    },
    Object {
      "name": "Support the Equal Justice Initiative",
      "role": "link",
    },
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Submit search",
      "role": "button",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "level": 3,
      "name": "v1.0-badversion is not a valid semantic version.",
      "role": "heading",
    },
    Object {
      "name": "To search for packages like bad.package,",
      "role": "StaticText",
    },
    Object {
      "name": "click here",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Reddit",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "400 Bad Request · pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`home accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Black Lives Matter",
      "role": "StaticText",
    },
    Object {
      "name": "Support the Equal Justice Initiative",
      "role": "link",
    },
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Cartoon gopher typing",
      "role": "img",
    },
    Object {
      "description": "Search for Go packages",
      "focused": true,
      "name": "Search for Go packages",
      "role": "textbox",
    },
    Object {
      "name": "Search",
      "role": "button",
    },
    Object {
      "name": "EXAMPLE SEARCHES:",
      "role": "StaticText",
    },
    Object {
      "name": "“http”",
      "role": "link",
    },
    Object {
      "name": "“command”",
      "role": "link",
    },
    Object {
      "name": "“yaml OR json OR xml”",
      "role": "link",
    },
    Object {
      "name": "Search help",
      "role": "link",
    },
    Object {
      "name": "Frequently asked questions:",
      "role": "StaticText",
    },
    Object {
      "name": "How can I add a package?",
      "role": "link",
    },
    Object {
      "name": "How can I remove a package?",
      "role": "link",
    },
    Object {
      "name": "How can I add a go badge in my README file?",
      "role": "link",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Reddit",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`license policy accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Black Lives Matter",
      "role": "StaticText",
    },
    Object {
      "name": "Support the Equal Justice Initiative",
      "role": "link",
    },
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Submit search",
      "role": "button",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "level": 1,
      "name": "License Disclaimer",
      "role": "heading",
    },
    Object {
      "name": "The Go website displays license information in order to help users evaluate packages for their intended use. Licenses are detected using heuristics based on their file name and contents. We hope this information is helpful, but this is not legal advice and we do not make any guarantees regarding the accuracy of our license detection.",
      "role": "StaticText",
    },
    Object {
      "name": "If we are not able to detect one of the licenses below, only limited package and module information will be made available. If you are a package author seeking to make your content available on the Go website, please be aware that our detection algorithms can be affected by any modifications of the license text, or by the use of an uncommon license file name.",
      "role": "StaticText",
    },
    Object {
      "name": "We currently use",
      "role": "StaticText",
    },
    Object {
      "name": "github.com/google/licensecheck",
      "role": "link",
    },
    Object {
      "name": "for license detection, and look for licenses in files with the following names: COPYING, COPYING.md, COPYING.markdown, COPYING.txt, LICENCE, LICENCE.md, LICENCE.markdown, LICENCE.txt, LICENSE, LICENSE.md, LICENSE.markdown, LICENSE.txt, LICENSE-2.0.txt, LICENCE-2.0.txt, LICENSE-APACHE, LICENCE-APACHE, LICENSE-APACHE-2.0.txt, LICENCE-APACHE-2.0.txt, LICENSE-MIT, LICENCE-MIT, LICENSE.MIT, LICENCE.MIT, LICENSE.code, LICENCE.code, LICENSE.docs, LICENCE.docs, LICENSE.rst, LICENCE.rst, MIT-LICENSE, MIT-LICENCE, MIT-LICENSE.md, MIT-LICENCE.md, MIT-LICENSE.markdown, MIT-LICENCE.markdown, MIT-LICENSE.txt, MIT-LICENCE.txt, MIT_LICENSE, MIT_LICENCE, UNLICENSE, UNLICENCE. The match is case-insensitive.",
      "role": "StaticText",
    },
    Object {
      "name": "We currently detect and recognize the following licenses:",
      "role": "StaticText",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "0BSD",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AFL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AGPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AGPL-3.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "AGPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Apache-1.1",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Apache-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Artistic-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-1-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-2-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-2-Clause-Patent",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-2-Clause-Views",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-3-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-3-Clause-Clear",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-3-Clause-Open-MPI",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-4-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSD-4-Clause-UC",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BSL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "BlueOak-1.0.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-4.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-SA-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC-BY-SA-4.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "CC0-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "EPL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "EPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "EUPL-1.2",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-2.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-2.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-3.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "GPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "HPND",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "ISC",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "JSON",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-2.1",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-2.1-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "LGPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MIT",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MIT-0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "MPL-2.0-no-copyleft-exception",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "NCSA",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "NIST-PD",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "NIST-PD-fallback",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "OSL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "OpenSSL",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "PostgreSQL",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Python-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "UPL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Unlicense",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "StaticText",
    },
    Object {
      "name": "Zlib",
      "role": "link",
    },
    Object {
      "name": "If you use a package whose license is not detected, please inform the package author. If you are a package author who believes a license for one of your packages should have been detected and was not, please check for discrepancies between your license and the official text. If you still believe there is an error, please",
      "role": "StaticText",
    },
    Object {
      "name": "file an issue",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Reddit",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "License Policy · pkg.go.dev",
  "role": "RootWebArea",
}
`;

exports[`search help accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Black Lives Matter",
      "role": "StaticText",
    },
    Object {
      "name": "Support the Equal Justice Initiative",
      "role": "link",
    },
    Object {
      "name": "Go",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Submit search",
      "role": "button",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "level": 1,
      "name": "Search help",
      "role": "heading",
    },
    Object {
      "name": "You can use symbols or words in your search to make your search results more precise.",
      "role": "StaticText",
    },
    Object {
      "level": 2,
      "name": "Search for an exact match",
      "role": "heading",
    },
    Object {
      "name": "Put a word or phrase inside quotes. For example,",
      "role": "StaticText",
    },
    Object {
      "name": "\\"go cloud\\"",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "level": 2,
      "name": "Combine searches",
      "role": "heading",
    },
    Object {
      "name": "Put OR between each search query. For example,",
      "role": "StaticText",
    },
    Object {
      "name": "yaml OR json",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "level": 2,
      "name": "Search by package path",
      "role": "heading",
    },
    Object {
      "name": "You can search for a package by its full or partial import path. For example,",
      "role": "StaticText",
    },
    Object {
      "name": "go/packages",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "name": "If the query matches a package import path, you will be redirected to the package details page for the latest version of that package. For example,",
      "role": "StaticText",
    },
    Object {
      "name": "golang.org/x/tools/go/packages",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "StaticText",
    },
    Object {
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Issue Tracker",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Reddit",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Golang Weekly",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "Search Help · pkg.go.dev",
  "role": "RootWebArea",
}
`;
